--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://taiyoslime-sandbox.github.io/shitposting",
   "devDependencies": {
     "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.0"
+    "react-scripts": "^2.1.2"
   },
   "dependencies": {
     "react": "^15.4.2",
@@ -17,5 +17,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "react-scripts build && gh-pages -d build"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
